2014-05-06  Aurelien Jarno  <aurelien@aurel32.net>

        [BZ# 16916]
        * sysdeps/unix/sysv/linux/sparc/bits/eventfd.h (EFD_SEMAPHORE):
        Define.

2014-05-04  Allan McRae  <allan@archlinux.org>

	* po/eo.po: Update Esperanto translation from translation project.

2014-05-01  David S. Miller  <davem@davemloft.net>

	[BZ #16885]
	* sysdeps/sparc/sparc64/strcmp.S: Fix end comparison handling when
	multiple zero bytes exist at the end of a string.
	Reported by Aurelien Jarno <aurelien@aurel32.net>

	* string/test-strcmp.c (check): Add explicit test for situations where
	there are multiple zero bytes after the first.

2014-02-27  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16623]
	* sysdeps/ieee754/dbl-64/s_sin.c (__sin): Preserve sign of A
	and DA.
	(__cos): Likewise.

2014-02-12  Dylan Alex Simon  <dylan@dylex.net>

	[BZ #16545]
	* sysdeps/x86_64/fpu/libm-test-ulps: Update on AMD family 21h
	model 1.

2014-02-06  Carlos O'Donell  <carlos@redhat.com>

	[BZ #16529]
	* inet/netinet/in.h: Remove comma after IPPROTO_MH.

2014-02-06  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* manual/contrib.texi: Update entry for Carlos O'Donell,
	Joseph Myers, Roland McGrath, Alexandre Oliva and Ryan Arnold.

2014-02-05  Carlos O'Donell  <carlos@rehdat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h: Fix comment.

	* sysdeps/unix/sysv/linux/kernel-features.h
	[__LINUX_KERNEL_VERSION >= 0x020621]
	(__ASSUME_PROC_PID_TASK_COMM): Define.

2014-02-05  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* manual/contrib.texi: Update entry for Ondrej Bilka, Will
	Newton and Alexandre Oliva.  Add entries for Steve Ellcey, Chris
	Leonard and Allan McRae.

2014-02-04  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update for some 64-bit differences from
	32-bit.

2014-02-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/ld-le.abilist: New
	file