@@ -9,7 +9,8 @@ Version 2.19.1
 
 * The following bugs are resolved with this release:
 
-  16545, 16623, 16885, 16916.
+  16545, 16623, 16885, 16916, 16943.
+
 
 Version 2.19
 
